objects/Accel_Application_Error__c.object
<CustomObject>
    <description>Object to store batch job logs and custom app specific errors.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accel Application Logs</relationshipLabel>
        <relationshipName>Accel_Application_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>The batch size that this job was requested to run with.</description>
        <inlineHelpText>The batch size that this job was requested to run with.</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Account__r.County_LU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covid_Region__c</fullName>
        <formula>Account__r.Covid_Region_LU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covid Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Details__c</fullName>
        <defaultValue>&quot; &quot;</defaultValue>
        <description>Logging for the individual job.</description>
        <inlineHelpText>Logging for the individual job.</inlineHelpText>
        <label>Execution Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Record_Link__c</fullName>
        <description>Used as a help for things like lightning email templates.</description>
        <formula>/*
 * Used as a help for things like lightning email templates. 
 */
LEFT($Api.Partner_Server_URL_500, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_500)) + Id</formula>
        <inlineHelpText>Used as a help for things like lightning email templates.</inlineHelpText>
        <label>External Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Job_Id__c</fullName>
        <description>The id of the job initial job. ie. if there was a batch job that fired a queueable job or other batch jobs. used the initial batch job id.</description>
        <inlineHelpText>The id of the job initial job. ie. if there was a batch job that fired a queueable job or other batch jobs. used the initial batch job id.</inlineHelpText>
        <label>Initiating Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <defaultValue>&quot;BatchApex&quot;</defaultValue>
        <label>JobType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>SharingRecalculation</fullName>
                </value>
                <value>
                    <fullName>ScheduledApex</fullName>
                </value>
                <value>
                    <fullName>BatchApex</fullName>
                </value>
                <value>
                    <fullName>BatchApexWorker</fullName>
                </value>
                <value>
                    <fullName>TestRequest</fullName>
                </value>
                <value>
                    <fullName>TestWorker</fullName>
                </value>
                <value>
                    <fullName>ApexToken</fullName>
                </value>
                <value>
                    <fullName>Queueable</fullName>
                </value>
                <value>
                    <fullName>MethodName</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <formula>Account__r.MunicipalityLookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Job_Status__c</fullName>
        <label>Overall Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Partial Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Rolled Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_End_Date__c</fullName>
        <label>Process End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Start_Date__c</fullName>
        <label>Process Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Job_Id__c</fullName>
        <description>The Id of the job that was scheduled that fired this batch.</description>
        <inlineHelpText>The Id of the job that was scheduled that fired this batch.</inlineHelpText>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Count_of_Clean_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Count of Clean Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_County_of_Dirty_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Count of Dirty Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Executions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Executions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of records we are trying to update.</description>
        <inlineHelpText>The amount of records we are trying to update.</inlineHelpText>
        <label>Total Records Processed</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Selected__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of records selected. ie. accumulative value of start query records.</description>
        <inlineHelpText>The total number of records selected. ie. accumulative value of start query records.</inlineHelpText>
        <label>Total Records Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total total number of records for which an update succeeded</description>
        <inlineHelpText>Total total number of records for which an update succeeded</inlineHelpText>
        <label>Total Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records_Upserted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Upserted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Updates_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of records for which an update was attempted, but failed with a DML Error.</description>
        <inlineHelpText>The total number of records for which an update was attempted, but failed with a DML Error.</inlineHelpText>
        <label>Total Updates Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Upserts_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Upserts Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User that Triggered the Error</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accel_Application_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accel Application Log</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stack_Trace__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Community_Errors</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accel_Application_Error__c.Community</value>
        </filters>
        <label>All Community Errors</label>
    </listViews>
    <listViews>
        <fullName>All_GeoTab_Failures</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <columns>Initiating_Job_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex,Queueable</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>GeoTab</value>
        </filters>
        <filters>
            <field>Overall_Job_Status__c</field>
            <operation>equals</operation>
            <value>Failed,Rolled Back</value>
        </filters>
        <filters>
            <field>Total_Records_Selected__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All GeoTab Failures</label>
    </listViews>
    <listViews>
        <fullName>All_GeoTab_Jobs</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <columns>Initiating_Job_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex,Queueable</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>GeoTab</value>
        </filters>
        <label>All GeoTab Jobs</label>
    </listViews>
    <listViews>
        <fullName>All_PA_Advisory_Import_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Initiating_Job_Id__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Upserted__c</columns>
        <columns>Total_Upserts_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Name__c</field>
            <operation>equals</operation>
            <value>PortalAdvisoryQueueableImport</value>
        </filters>
        <label>All PA Advisory Import Jobs</label>
    </listViews>
    <listViews>
        <fullName>All_Salesforce_CRM_Errors</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stack_Trace__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Salesforce CRM Errors</label>
    </listViews>
    <listViews>
        <fullName>All_Salesforce_Jobs</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex,Queueable</value>
        </filters>
        <label>All Salesforce Jobs</label>
    </listViews>
    <listViews>
        <fullName>Batch_HPD_Purge</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Name__c</field>
            <operation>equals</operation>
            <value>BatchHpdPurge</value>
        </filters>
        <label>Batch HPD Purge</label>
    </listViews>
    <listViews>
        <fullName>CL_Jobs</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>cl</value>
        </filters>
        <label>CL Jobs</label>
    </listViews>
    <listViews>
        <fullName>CL_Scheduler_Jobs</fullName>
        <booleanFilter>1 AND (2 OR 3 or 4 or 5 or 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>User__c</columns>
        <columns>Initiating_Job_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex,ApexToken,Queueable</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>clCustomMetadataUpdate</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>clBatchCycleNumberUpdate</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>clBatchRouteScheduleCreation</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>clBatchRouteProcessingSheetCreation</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>clBatchMetersCreation</value>
        </filters>
        <label>CL - Scheduler Jobs</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_GeoTab_Failures</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <columns>Initiating_Job_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>BatchApex,Queueable</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>GeoTab</value>
        </filters>
        <filters>
            <field>Overall_Job_Status__c</field>
            <operation>equals</operation>
            <value>Partial Success</value>
        </filters>
        <filters>
            <field>Total_Records_Selected__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All GeoTab Partial Failures</label>
    </listViews>
    <listViews>
        <fullName>County_and_Region_Manual_Fixes</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Municipality__c</columns>
        <columns>County__c</columns>
        <columns>Covid_Region__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accel_Application_Error__c.Salesforce_Jobs</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>equals</operation>
            <value>QueueableCountyUpdaterLiveManualFix</value>
        </filters>
        <label>County and Region Manual Fixes</label>
    </listViews>
    <listViews>
        <fullName>Muni_Deploy_Smoke_Testing</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Municipality__c</columns>
        <columns>County__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JobType__c</field>
            <operation>equals</operation>
            <value>Queueable</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>2/26/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>RJN</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>C3LLC</value>
        </filters>
        <label>Muni Deploy Smoke Testing</label>
    </listViews>
    <listViews>
        <fullName>Municipality_Auto_Updater</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Municipality__c</columns>
        <columns>County__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accel_Application_Error__c.Salesforce_Jobs</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>equals</operation>
            <value>QueuableMuniUpdater</value>
        </filters>
        <label>Municipality Auto Updater</label>
    </listViews>
    <listViews>
        <fullName>Municipality_Auto_Updater_Failed_Logs</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Municipality__c</columns>
        <columns>County__c</columns>
        <columns>Overall_Job_Status__c</columns>
        <columns>Process_Start_Date__c</columns>
        <columns>Process_End_Date__c</columns>
        <columns>Total_Records_Selected__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Total_Records_Updated__c</columns>
        <columns>Total_Updates_Failed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accel_Application_Error__c.Salesforce_Jobs</value>
        </filters>
        <filters>
            <field>Job_Name__c</field>
            <operation>equals</operation>
            <value>QueuableMuniUpdater</value>
        </filters>
        <filters>
            <field>Overall_Job_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Municipality Auto Updater Failed Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accel Application Logs</pluralLabel>
    <recordTypes>
        <fullName>Community</fullName>
        <active>true</active>
        <description>Any Salesforce Community</description>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>PA_Advisory</fullName>
        <active>true</active>
        <description>PA Advisory Loader</description>
        <label>PA Advisory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_CRM</fullName>
        <active>true</active>
        <description>Backend Core Salesforce CRM Custom Cmp Logging</description>
        <label>Salesforce CRM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Jobs</fullName>
        <active>true</active>
        <description>Queueable And Apex jobs</description>
        <label>Salesforce Jobs</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>